syntax = 'proto3';

import "google/protobuf/any.proto";
import "types.proto";

package co.gaffe.proto;

option java_multiple_files = true;
option java_package = "co.gaffe.proto";
option go_package = "internal/generated";


message Literal {
  oneof literal_type {
    DataType null = 1;
    bytes binary = 2;
    bool boolean = 3;

    int32 byte = 4;
    int32 short = 5;
    int32 integer = 6;
    int64 long = 7;
    float float = 10;
    double double = 11;
    Decimal decimal = 12;

    string string = 13;

    // Date in units of days since the UNIX epoch.
    int32 date = 16;
    // Timestamp in units of microseconds since the UNIX epoch.
    int64 timestamp = 17;
    // Timestamp in units of microseconds since the UNIX epoch (without timezone information).
    int64 timestamp_ntz = 18;

    CalendarInterval calendar_interval = 19;
    int32 year_month_interval = 20;
    int64 day_time_interval = 21;
    Array array = 22;
    Map map = 23;
    Struct struct = 24;
  }

  message Decimal {
    // the string representation.
    string value = 1;
    // The maximum number of digits allowed in the value.
    // the maximum precision is 38.
    optional int32 precision = 2;
    // declared scale of decimal literal
    optional int32 scale = 3;
  }

  message CalendarInterval {
    int32 months = 1;
    int32 days = 2;
    int64 microseconds = 3;
  }

  message Array {
    DataType element_type = 1;
    repeated Literal elements = 2;
  }

  message Map {
    DataType key_type = 1;
    DataType value_type = 2;
    repeated Literal keys = 3;
    repeated Literal values = 4;
  }

  message Struct {
    DataType struct_type = 1;
    repeated Literal elements = 2;
  }
}